# VirtualCyberQ

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml  docker.yml  release.yml
VirtualCyberQ/: status.py  timer.py
VirtualCyberQ/app/: views.py
VirtualCyberQ/app/templates/: all.xml  config.xml  status.xml
docker/: Dockerfile  docker-compose.yml
docs/: CYBERQ_PROTOCOL.md  DESIGN.md  scenarios.md
examples/: drive_a_cook.py  inject_faults.py  proxy_repo_conftest.py  run_local.py
src/virtualcyberq/: __init__.py  cli.py
src/virtualcyberq/client/: __init__.py  admin_client.py
src/virtualcyberq/core/: __init__.py  clock.py  control.py  defaults.py  enums.py  personas.py  profiles.py  rng.py  simulation.py  state.py  thermal.py  units.py  validation.py
src/virtualcyberq/core/faults/: __init__.py  http.py  network.py  power.py  sensor.py
src/virtualcyberq/scenario/: __init__.py  model.py  runner.py
src/virtualcyberq/scenario/builtin/: brisket_with_flaky_wifi.yaml  flaky_wifi.yaml
src/virtualcyberq/testing/: __init__.py  harness.py  pytest_plugin.py
src/virtualcyberq/web/: __init__.py  admin_app.py  admin_models.py  device_app.py  device_faults.py  server.py
src/virtualcyberq/xml/: __init__.py  allxml.py  configxml.py  html_pages.py  post_parse.py  status.py
tests/: conftest.py  status_tests.py  timer_tests.py
tests/faults/: test_faults.py
tests/fixtures/: real_all.xml  real_config.xml  real_status.xml
tests/scenario/: test_scenarios.py
tests/unit/: test_clock.py  test_control_law.py  test_faults_determinism.py  test_personas.py  test_state_defaults.py  test_thermal.py  test_units.py  test_validation.py
tests/wire/: test_device_plane.py  test_serializers.py
