[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "virtual-cyberq"
version = "0.1.0"
description = "High-fidelity virtual/emulated BBQ Guru CyberQ WiFi device with thermal simulation, fault injection, and an out-of-band control API."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Kevin Tegtmeier", email = "kevin@tegtmeier.me" }]
keywords = ["cyberq", "bbqguru", "bbq", "emulator", "simulator", "test", "fake-device"]
classifiers = [
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Framework :: Pytest",
  "Topic :: Software Development :: Testing :: Mocking",
]
dependencies = [
  "fastapi>=0.100",
  "uvicorn[standard]>=0.23",
  "pydantic>=2",
  "pyyaml>=6",
  "httpx>=0.24",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "pytest-asyncio",
  "hypothesis",
  "coverage",
  "ruff",
  "mypy",
  "import-linter",
  "types-PyYAML",
]
docs = ["mkdocs", "mkdocs-material"]

[project.scripts]
virtual-cyberq = "virtualcyberq.cli:main"

[project.entry-points.pytest11]
virtualcyberq = "virtualcyberq.testing.pytest_plugin"

[project.urls]
Homepage = "https://github.com/kevinteg/VirtualCyberQ"
Issues = "https://github.com/kevinteg/VirtualCyberQ/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/virtualcyberq"]

[tool.hatch.build.targets.sdist]
include = [
  "src/virtualcyberq",
  "docs",
  "LICENSE",
  "README.md",
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "RUF"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["virtualcyberq"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI dependency-injection markers are designed to be used as argument
# defaults; they are effectively immutable, so B008 does not apply.
extend-immutable-calls = [
  "fastapi.Body",
  "fastapi.Cookie",
  "fastapi.Depends",
  "fastapi.File",
  "fastapi.Form",
  "fastapi.Header",
  "fastapi.Path",
  "fastapi.Query",
]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src/virtualcyberq"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["virtualcyberq"]

[tool.coverage.report]
show_missing = true

[tool.importlinter]
root_package = "virtualcyberq"
include_external_packages = true

[[tool.importlinter.contracts]]
name = "core is framework-agnostic"
type = "forbidden"
source_modules = ["virtualcyberq.core"]
forbidden_modules = ["fastapi", "flask", "starlette", "uvicorn"]
